fixed responsivness with medium screen size. Jumbotron is now fully responsive. Added a few comments for readability

--- a/public/css/styles-md.css
+++ b/public/css/styles-md.css
@@ -1,1 +1,27 @@
-styles-md.css
+.main-phone {
+	font-size: 2em;
+	text-shadow: 4px 4px 17px #000;
+}
+
+.jumbotron {
+	background-image: url(../images/3keys.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	padding: 40px 0 5px 0;
+	margin-bottom: 0;
+}
+
+.jumbo-card {
+	background-image: url(../images/dirty-metal-surface.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	text-align: center;
+	width: 65%;
+	margin: 0 auto;
+	padding-bottom: 10px;
+	text-shadow: 4px 4px 7px #000;
+	box-shadow: 5px 5px 20px #000;;
+	color: white;
+	
+	border-radius: 10px;
+}
