--- a/public/css/styles-sm.css
+++ b/public/css/styles-sm.css
@@ -11,7 +11,7 @@
 	padding: 0;
 }
 
-.jumbo-wrapper {
+.jumbo-card {
 	background-image: url(../images/dirty-metal-surface.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
